Added combo selector with filter

--- a/SamplePlugin/SamplePlugin.csproj
+++ b/SamplePlugin/SamplePlugin.csproj
@@ -17,6 +17,14 @@
     </Content>
   </ItemGroup>
 
+    <ItemGroup>
+        <Reference Include="FFXIVClientStructs">
+            <HintPath>$(AppData)\XIVLauncher\addon\Hooks\dev\FFXIVClientStructs.dll</HintPath>
+            <Private>false</Private>
+        </Reference>
+    </ItemGroup>
+    
+
   <ItemGroup>
     <PackageReference Include="Lumina" Version="4.1.2" />
     <PackageReference Include="Lumina.Excel" Version="7.0.1" />
