--- a/VoiceDirector/VoiceDirector.csproj
+++ b/VoiceDirector/VoiceDirector.csproj
@@ -1,13 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Project Sdk="Microsoft.NET.Sdk">
-  <Import Project="Dalamud.Plugin.Bootstrap.targets" />
+<Project Sdk="Dalamud.NET.Sdk/12.0.2">
 
   <PropertyGroup>
-    <Version>1.2.0.0</Version>
-    <Description>A plugin to Changes your VO language on a per-duty basis</Description>
-    <PackageProjectUrl>https://github.com/Noevain/VoiceDirector</PackageProjectUrl>
-    <PackageLicenseExpression>AGPL-3.0-or-later</PackageLicenseExpression>
-    <IsPackable>false</IsPackable>
+    <Version>1.3.0.0</Version>
   </PropertyGroup>
 
 </Project>
